--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>次のバス（平日）</h1>
         <div class="info-box">
-            <h2><span id="bus-stop-name">（バス停名）</span> 発 → （行き先名）行き</h2>
+            <h2><span id="bus-stop-name">近大高専前</span> 発 → 名張駅東口行き</h2>
         </div>
         <div class="info-box current-time-box">
             <p>現在時刻:</p>
