--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
             <p id="message" class="message-display"></p>
         </div>
     </div>
+    <footer>
+        <p>
+            このサービスで使用しているバスのリアルタイム運行情報は、
+            <a href="https://bus-vision.jp/sanco/view/opendataSanco.html" target="_blank" rel="noopener noreferrer">bus-vision.jp 三重交通バスロケーションシステム オープンデータ</a>
+            の情報を利用しています。
+        </p>
+        <p>
+            バス事業者：<a href="https://www.sanco.co.jp/" target="_blank" rel="noopener noreferrer">三重交通株式会社</a>
+        </p>
+    </footer>
+    
     <script src="script.js"></script>
 </body>
 </html>
