--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
             バス事業者：<a href="https://www.sanco.co.jp/" target="_blank" rel="noopener noreferrer">三重交通株式会社</a>
         </p>
     </footer>
+    <html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>次のバスまでの時間</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/protobufjs@7.2.5/dist/protobuf.min.js"></script>
+    </head>
+<body>
+    <div class="container">
+        </div>
+    <footer>
+        </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
     <script src="script.js"></script>
 </body>
 </html>
